# smw_music

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  README.rst  bump_version.py  dashboard.spec  pyproject.toml  release_notes.sh  tox.ini  update_interfaces.py  update_resources.sh
.github/workflows/: bandit.yml  build.yml  deploy.yml  lint.yml  mypy.yml  publish.yml  test.yml  tox.yml
.reuse/: dep5
doc/: Makefile
doc/images/: processing_flow.drawio  programs.drawio
doc/source/: conf.py  dashboard_signal_slot_map.rst  examples.rst  index.rst  modules.rst  requirements.txt  smw_music.brr.rst  smw_music.music_xml.rst  smw_music.rst  smw_music.scripts.brr.rst  smw_music.scripts.convert.rst  smw_music.scripts.decode_spc.rst  smw_music.scripts.rst  smw_music.spc.rst
misc/: SMW_Porting.mpal  mml.qml  mml_v3.02.drm  mml_v4.00.drm  mml_v4.10.drm
resources/: resources.qrc
smw_music/: __init__.py  amk.py  brr.py  common.py  log.py  mml.py  music_xml.py  nspc.py  ramfs.py  sample_player.py  spc.py  spc700.py  spcmw.py  utils.py
smw_music/amk/: __init__.py  amk.py  channel.py  common.py  mml.py  reduction.py  song.py
smw_music/data/: codenames.csv  convert.bat  convert.sh  dashboard.ui  mml.txt  preferences.ui  project_settings.ui  sample_groups.txt  spc_output.txt
smw_music/exporters/: __init__.py  common.py  mml.py
smw_music/ext_tools/: __init__.py  amk.py  spcplay.py
smw_music/music_xml/: __init__.py  channel.py  common.py  context.py  converter.py  echo.py  instrument.py  mml.py  reduction.py  shared.py  song.py  tokens.py
smw_music/scripts/: __init__.py  brr.py  convert.py  dashboard.py  decode_spc.py  describe_brr.py  dump_ast.py  extract_brrs.py  filttool.py
smw_music/scripts/dashboard/: app.py  controller.py  model.py  panels.py  widgets.py
smw_music/song/: __init__.py  common.py  reduction.py  song.py  tokens.py
smw_music/spc700/: __init__.py  brr.py  echo.py  limits.py  nspc.py  sample_player.py  spc700.py
smw_music/spcmw/: __init__.py  advanced.py  amk.py  common.py  echo.py  instrument.py  load.py  load_v0.py  load_v1.py  preferences.py  project.py  sample.py  save.py  spcmw.py  stypes.py
smw_music/spcmw/old_save/: v0.py  v1.py
smw_music/spcmw/saves/: __init__.py  v0.py  v1.py
smw_music/ui/: __init__.py  controller.py  dashboard.py  dashboard_ui.py  dashboard_view.py  envelope_preview.py  file_picker.py  keyboard.py  midi_keyboard.py  model.py  panels.py  preferences.py  preferences_view.py  project_settings.py  project_settings_view.py  quotes.py  resources.py  sample.py  sample_packs.py  save.py  settings.py  state.py  utilization.py  utils.py  visualization.py  widgets.py
smw_music/ui/old_save/: v0.py
tests/: __init__.py  test_dashboard.py  test_echo.py  test_preferences.py  test_smw_music.py  test_spc.py  update_tests.sh
tests/data/: __init__.py
tests/data/preferences/: custom.yaml  default.yaml  minimal.yaml  wrong_version.yaml
tests/dst/: Artic_Instrument_Changes.txt  Articulations.txt  Broken_Percussion_Loop.txt  Crescendo_Triplet_Loops.txt  Crescendos.txt  Crescendos_single_volume.txt  Dots.txt  Dynamics.txt  Empty_Section.txt  EndingTriplet.txt  ExtraInstruments.txt  Grace_Notes.txt  Headers.txt  Instruments_no_parse_to.txt  Instruments_parse_to.txt  Loop_Point.txt  Loops.txt  Metadata.txt  No_Metadata.txt  Percussion.txt  Percussion_opt.txt  Pickup_Measure.txt  Repeats.txt  SMB_Castle_Theme.txt  SMB_Castle_Theme_Echo.txt  SMB_Castle_Theme_custom_samples.txt  SMB_Castle_Theme_full.txt  SMB_Castle_Theme_measures.txt  Slur_Tie.txt  Slurred_Triplets.txt  Slurs.txt  SwapRepeatAnnotation.txt  Tempos.txt  TiedArticulations.txt  Ties.txt  Transposing_Instrument.txt  Triplets.txt  Vibrato.txt
tests/dst/ui/: custom_percussion.mml  custom_samples.mml  global_legato.mml  loop.mml  measure_numbers.mml  vanilla.mml
tests/src/: Advanced.mscz  Advanced.mxl  Amen.mxl  Artic_Instrument_Changes.mxl  Articulations.mxl  Bad_Percussion.mxl  Broken_Percussion_Loop.mxl  Clefs.mxl  Crescendo_Triplet_Loops.mxl  Crescendos.mxl  CustomPercussion.mxl  Dots.mxl  Dynamics.mxl  Empty_Section.mxl  EndingTriplet.mxl  ExtraInstruments.mxl  GUI_Test.mxl  Grace_Notes.mxl  Headers.mxl  Instruments.mxl  Loop_Point.mxl  Loops.mxl  Metadata.mxl  Multisample.mxl  No_Metadata.mxl  Percussion.mxl  Pickup_Measure.mxl  Repeats.mxl  SMB_Castle_Theme.mscz  SMB_Castle_Theme.musicxml  SMB_Castle_Theme.mxl  Slur_Tie.mxl  Slurred_Triplets.mxl  Slurs.mxl  Superloops.mxl  SwapRepeatAnnotation.mxl  Tempos.mxl  TiedArticulations.mxl  Ties.mxl  TooLow.mxl  (+4 more)
tests/src/bad/: Chords.mxl  ComplexNoteLength.mxl  Errors.mxl  Invalid_Dynamics.mxl  Percussion_Chords.mxl  TooHigh.mxl  TooLow.mxl  Voices.mxl
webserver/: httpd.conf  upload.wsgi
webserver/templates/: upload.html
