# SPDX-FileCopyrightText: 2021 The SMW Music Python Project Authors <https://github.com/com-posers-pit/smw_music/blob/develop/AUTHORS.rst>
#
# SPDX-License-Identifier: CC0-1.0

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
line-length = 79

[tool.poetry]
name = "smw_music"
version = "0.1.1"
description = "Tools for working with SMW Music"
authors = ["Thomas A. Werne <werneta@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.rst"
repository = "http://github.com/com-posers-pit/smw_music"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"
music21 = "^7.1.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
poetry = "^1.1.12"
tox = "^3.24.4"
pre-commit = "^2.16.0"

[tool.poetry.scripts]
smw_music_xml_to_amk = "smw_music.scripts.convert:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/com-posers-pit/smw_music/issues"

[tool.pydocstyle]
convention = "numpy"

[tool.pylint.FORMAT]
good-names = "n"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
